--- a/proyectoCv/style.css
+++ b/proyectoCv/style.css
@@ -389,11 +389,13 @@ body {
   justify-content: center;
   gap: var(--pv-gap-xl);
   margin-top: var(--pv-margin-xl);
+  flex-direction: row;
+  margin: 50px;
 }
 
 .thirdSectionBanner {
-  height: 200px;
-  width: 50%;
+  height: 300px;
+  width: 100%;
   background: url("./assets/imgs/section3_1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -408,13 +410,19 @@ body {
   background-position: center;
   border-radius: var(--pv-borderRad);
   height: 300px;
-  width: 175px;
+  width: 100%;
 }
 
+.thirdSectionContent,
+.thirdSectionContent2 {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 
 .fourthSectionText,
 .fourthSectionText2 {
-  width: 80%;
+  width: 100%;
 }
 
 
@@ -454,14 +462,119 @@ body {
     width: 80%;
   }
 
-  .secondSectionBanner,
+
   .thirdSectionBanner {
+    width: 100%;
+  }
+
+  .secondSectionBanner {
     width: 80%;
   }
 
   .thirdSectionBanner2 {
     height: 300px;
-    width: 80%;
+    width: 100%;
   }
 
+}
+
+
+/* TEXT CAMBIANTE*/
+
+span {
+  contain: paint;
+  padding: 1rem 0;
+}
+
+p {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  gap: 0.5ch;
+  line-height: 0.9;
+}
+
+span:nth-of-type(2) {
+  view-transition-name: swap;
+  color: hsl(64, 100%, 50%);
+}
+
+/* span:first-of-type {
+  view-transition-name: first;
+} */
+span:last-of-type {
+  view-transition-name: last
+}
+
+::view-transition-new(swap),
+::view-transition-old(swap) {
+  height: 100%;
+  object-fit: none;
+  object-position: top left;
+}
+
+::view-transition-old(swap) {
+  animation-name: slide-out;
+  animation-duration: 0.75s;
+    animation-timing-function: linear(
+    0, 0.6832 7.89%, 0.9171 11.07%, 1.0251,
+    1.1058 14.9%, 1.1619 16.86%,
+    1.1945 18.91%, 1.2024 20.02%,
+    1.2043 21.18%, 1.1907, 1.1598 26.27%,
+    1.0604 32.59%, 1.0172 35.84%,
+    0.9839 39.49%, 0.967 43.26%,
+    0.9639 45.77%, 0.9661 48.59%,
+    0.9963 60.54%, 1.0054 67.42%, 1
+  );
+}
+::view-transition-new(swap) {
+  animation-name: slide-in;
+  animation-duration: 0.75s;
+  animation-timing-function: linear(
+    0, 0.6832 7.89%, 0.9171 11.07%, 1.0251,
+    1.1058 14.9%, 1.1619 16.86%,
+    1.1945 18.91%, 1.2024 20.02%,
+    1.2043 21.18%, 1.1907, 1.1598 26.27%,
+    1.0604 32.59%, 1.0172 35.84%,
+    0.9839 39.49%, 0.967 43.26%,
+    0.9639 45.77%, 0.9661 48.59%,
+    0.9963 60.54%, 1.0054 67.42%, 1
+  );
+}
+
+::view-transition-group(last) {
+  animation-duration: 0.75s;
+    animation-timing-function: linear(
+    0, 0.6832 7.89%, 0.9171 11.07%, 1.0251,
+    1.1058 14.9%, 1.1619 16.86%,
+    1.1945 18.91%, 1.2024 20.02%,
+    1.2043 21.18%, 1.1907, 1.1598 26.27%,
+    1.0604 32.59%, 1.0172 35.84%,
+    0.9839 39.49%, 0.967 43.26%,
+    0.9639 45.77%, 0.9661 48.59%,
+    0.9963 60.54%, 1.0054 67.42%, 1
+  );
+}
+
+@keyframes slide-out {
+  100% {
+    opacity: 0;
+    translate: 0 100%;
+  }
+}
+
+@keyframes slide-in {
+  0% {
+    opacity: 0;
+    translate: 0 -100%;
+  }
+}
+
+.textEffect {
+  position: relative;
+    left: 50px;
+    margin: auto;
+    font-size: 25px;
+    color: white;
+    font-family: 'Kameron';
 }
