--- a/proyectoCv/galleryStyle.css
+++ b/proyectoCv/galleryStyle.css
@@ -150,16 +150,18 @@ a{
 }
   
 .gallery-track {
-    position: fixed;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 0.25rem;
-    padding: 0.25rem;
-    will-change: transform;
+  display: flex;
+  gap: 5px;
+  padding: 50px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: center;
 }
   
 .card {
     height: 400px;
+    width: 300px;
     overflow: hidden;
     border-radius: var(--pv-borderRad);
   
@@ -174,7 +176,7 @@ a{
       }
     }
 } 
-  
+/*   
 @media (width < 800px) {
     .gallery-track {
       grid-template-columns: repeat(3,1fr);
@@ -202,4 +204,4 @@ a{
         margin-top: 150px;
     }
   
-  }
+  } */
