--- a/proyectoCv/src/components/Gallery/gallery.html
+++ b/proyectoCv/src/components/Gallery/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="./assets/logopau_light.png" />
+    <link rel="icon" type="image/svg+xml" href="../assets/logopau_light.png" />
     <link rel="stylesheet" href="./galleryStyle.css">
     <script type="module" src="./galleryJS.js" defer></script>
     <title>Pau Vidal</title>
